--- a/report.tex
+++ b/report.tex
@@ -93,11 +93,11 @@ In the latest years, the number of CNNs for visual recognition task is growing, 
 \section{Dataset}\label{dataset}
 
 
-\paragraph{Overview}\mbox{}\\
+\subsection{Overview}\mbox{}\\
 La prima cosa necessaria per allenare una cnn per questi task è un grande dataset di quadri di differenti artisti. Il dataset da noi utilizzato è preso da \cite{ArtGANDataset} che non è altro che un sottoinsieme del dataset Wikiart (cit link a wikiart). Si tratta di un dataset contenete circa 19k immagini di 23 artisti differenti , provenienti da epoche diverse fra loro, i quali hanno stili diversi fra loro, ma influenzati fra loro. Le immagini differiscono in dimensioni e forma.  Ci sono dei file .csv che contengono le label di ogni quadro suddividendo i quadri per  autore .Per avere un dataset bilanciato, abbiamo, per ogni artista, selezionato randomly 450 quadri.
 L'organizzazione di \cite{ArtGANDataset} non presentava un test-set. Abbiamo quindi suddiviso i quadri in subset di train, validation e test con uno split 80-10-10, ottenengo quindi 360 quadri per il training, 45 per test e 45 per validation per ogni artista. In totale il numero complessivo di quadri è 10350.
 Inoltre \cite{ArtGANDataset} presentava alcuni quadri in più subset, cosa da noi evitata in quanto ciò non porterebbe ad una corretta valutazione delle performance.
-\paragraph{Preprocessing and Data augmentation}\mbox{}\\
+\subsection{Preprocessing and Data augmentation}\mbox{}\\
 Per dare in input le immagini alle cnn è necessario che esse abbiano una certa forma e dimensione. Per ogni immagine prendiamo un crop di 224x224 e zero-centered (sottrarre la media) e normalization e utilizzando media e deviazioni standard per ogni channel (trattandosi di immagini RGB) red, green e blue. \\
 Scrivere a cosa serve la data aug. Abbiamo utilizzato delle tecniche di data augmentation quali: per ogni immagine, prima di darla in input alla rete nella fase di training, abbiamo preso un crop 224x224 in una posizione casuale dell'immagine e flippato orizzontalmente con una prob del 50\%. Queste tecniche sono usate in task di visual recognition per aumentare il dataset e ridurre la possibilità di incorrere in overfitting.
 Inoltre, per questo specifico task, ogni punto del quadro ha contenuto informativo sullo stile dell'autore.
@@ -114,7 +114,7 @@ Spiegare prendendo spunto.
 
 Prima di tutto abbiamo allenanato le reti from scratch, in modo da cercare di imparare le features solamente per il compito di artisti identification.\\
 Successivamente partendo dalle stesse architetture usando i pesi pretreinate sul ImageNet Dataset, per valutare se le features estratte per l'image recognition possono essere un buon punto di partenza per l'artist identification. Infatti ci aspettiamo che per determinati stili, come il Realism o reinassence, tali features possono essere utili, cosa non vera per cubismo, minimalismo, astrattismo.
-\paragraph{AlexNet}\mbox{}\\
+\subsection{AlexNet}\mbox{}\\
 AlexNet was the winning entry in ILSVRC 2012. It solves the problem of image classification where the input is an image of one of 1000 different classes (e.g. cats, dogs etc.) and the output is a vector of 1000 numbers, achieving a top-5 error of 15,8\%.
 L'architettura è caratterizzata da 8 strati, 5 convolutional e 3 fully connected, con max pooling e ReLu come funzione di attivazione. RIFERIMENTO A IMMAGINE
 Un'altra caratteristica di ALexnet è l'utilizzo della tecnica di dropout, introdotta nello stesso anno in \cite{dropout}, per ridurre l'overfitting. 
@@ -124,7 +124,7 @@ As a result, the learnt weight parameters are more robust and do not get overfit
 MOTIVAZIONE SCELTA
 
 
-\paragraph{GoogLeNet}\mbox{}\\
+\subsection{GoogLeNet}\mbox{}\\
 È stato il vincitore di ILSVRC 2014. It achieves 6.67\% top-5 error on ImageNet.
 L'architettura è caratterizzata da 22 layer, con alcune novità per quanto riguarda gli strati fully connected, la gestione del problema del vanish del gradiente, e l'introduzione di un cossiddetto inception module.\\
 Another interesting addition to the architecture is to change the second last fully-connected layer with an average pooling layer. This layer spatially averages the feature map, converting 7x7x1024 input to 1x1x1024, reducing the computation and the number of parameters, by a factor of 49. This average pooling layer is finally followed by a normal fully-connected layer with 1000 neurons (and 1024x1000 parameters), for the 1000 ImageNet classes.
@@ -137,13 +137,13 @@ would have otherwise become very small, and thus slowing training, by time it
 reached the lower initial layers, receives gradient from the auxiliary classifiers
 and thus the net gradient becomes big enough to allow training to progress.
 
-\subparagraph{Inception Module}
+\subsubsection{Inception Module}
 Inception Modules are used in GoogLeNet to allow for more efficient computation through a dimensionality reduction with stacked 1x1 convolutions. The modules were designed to solve the problem of computational expense, as well as overfitting, among other issues. The solution, in short, is to take multiple kernel filter sizes within the CNN, and rather than stacking them sequentially, ordering them to operate on the same level. 
 
 As a neural net deals with a vast array of images, with wide variation in the featured image content, also known as the salient parts, they need to be designed appropriately. The most simplified version of an inception module works by performing a convolution on an input with not one, but three different sizes of filters (1x1, 3x3, 5x5). Also, max pooling is performed. Then, the resulting outputs are concatenated and sent to the next layer.
 A method to reduce the number of computation is dimensionality reduction. This involves convolutions with 1x1 filters before convolutions with bigger filters.
 
-\paragraph{ResNeXt}
+\subsection{ResNeXt}
 ResNeXt was the first runner up in ILSVRC 2016, achieving 3.03\% top-5 error rate, superando la precisione umana.
 Si tratta di una cnn residual, ossia presenta i cosiddetti residual block, (spiegazione residual).
 The model name, ResNeXt, contains Next. It means the next dimension, on top of the ResNet, ossia la CNN vincitrice del  ILSVRC 2015. \\
@@ -154,15 +154,56 @@ Noi abbiamo utilizzato
 
 \section{Experiments}\label{experiments}
 
-\paragraph{Setup}
+\subsection{Setup}\mbox{}\\
 
-\paragraph{Implementation Details}
+Both the built models and the experiments have been implemented in Pytorch (\cite{pytorch}). The reason why we chose this library is because of the presence of models, pretrained and not, that we wanted to study.\\
+The training of the models and the experiments were performed on a virtual machine (VM) hosted by \textit{Compute Engine}, one of the services provided by Google Cloud Platform (\cite{gcloud}). Its configuration, shown in table \ref{table:specVM}, is a pre-setting provided by the service itself and designed for deep learning applications  (\cite{vmconfig}). The dataset was stored in a \textit{Google Cloud Storage}'s Bucket, another service provided by Google Cloud Platform.
 
-\paragraph{Evaluation Metrics}
+\begin{table}
+	\centering
+	\begin{tabular}{|l|l|} 
+		\hline
+		\textbf{Component} & \textbf{Specification}  \\ 
+		\hline
+		OS                 & Debian 9                \\
+		vCPU               & 2                       \\
+		RAM                & 13GB                    \\
+		GPU                & 1X NVIDIA Tesla K80     \\
+		Disk               & 100GB                   \\
+		Disk Type          & SSD                     \\
+		Availability Zone  & us-west1-b              \\
+		\hline
+	\end{tabular}
+\\
+\caption{VM specifications}
+   	\label{table:specVM}
+\end{table}
 
-\paragraph{Results}
+\subsection{Implementation Details}
+
+We chose the Adam's update rule because the experiments using SGD were worse. The parameters we used are the default ones, i.e. learning rate $= 10^{-3}, \beta_{1}  = 0.9$ and $\beta_{2} = 0.999$. \\
+
+In transfer learning training, we set the number of epochs and the batch size to 15 and 32 respectively.  For each model chosen, pytorch makes available the final weights of these models trained on the ImageNet dataset (\cite{imagenet}), which makes transfer learning very easy to exploit.\\
+Initially, updating of weights is only allowed on those concerning FC-layers. With the aim of achieving higher accuracy, we have decided to allow the update of all weights to the entire network if for 3 consecutive epochs the accuracy does not improve by 3 percentage points. When this condition occurs, the update of the weights will be allowed on the whole network until the end of the training with a learning rate ten times smaller. This strong decrease is motivated by the fundamental idea of the use of transfer learning: it is assumed that the pre-trained weights are already "close" or enough good to those we are looking for, so it is good to search for them with a relatively small step-size.
+\\
+
+In training from scratch, the number of epochs was set to 20, while the batch size remained 32.\\ 
+Initialisation of the weights follows a uniform distribution in $[-x, x]$ where $x=1/\sqrt n$ and $n$ is the number of inputs to a given neuron (\textbf{STA COSA È DA VERIFICARE})\\
+We have experimented what in pytorch is called \textit{scheduler}, i.e. every 7 epochs the learning rate was divided by 10. This strategy, however, has not led to improvements and in fact the results exposed have been obtained without the use of this technique.
 
 
+\subsection{Results}\mbox{}\\
+
+Confusion matrix, varie figura/tabelle
+\begin{itemize}
+	\item Magari plot di accuracy e loss
+	\item sezione from scratch 
+	\item e sezione fine-tuning
+	\item magari comparato con previous works nelle tabella (cercare i risultati!!)
+	\item valutazioni su resneXt. learning rate variation. 
+\end{itemize}
+TABELLE: due tabelle. Una from scratch e una fine tuning. Riportiamo train accuracy e test accuracy. \\
+GRAFICI: Nel paragone fra le 3 reti fra un grafico per rete con plottato l'andamento di acc su training e acc su validation (argomentazioni sull'overfitting). Questo sia per fine tuning che per from scratch. Confusion matrix col miglior resnext (argomentazione su alcuni pittori si somigliano come cezanne e pissarro e alcuni non rappresentano fedelmente la realtà come dalì e van gogh). Perchè monet è confuso con pissarro?
 
 
 \section{Conclusions}\label{conclusions}
@@ -227,6 +268,17 @@ Noi abbiamo utilizzato
 	G. E. Hinton, N. Srivastava, A. Krizhevsky, I. Sutskever and R. R. Salakhutdinov.
 	Improving neural networks by preventing co-adaptation of feature detectors. 2012
 	
+	\bibitem{imagenet}
+	ImageNet: \url{http://www.image-net.org/}
+	
+	\bibitem{pytorch}
+	Pytorch: \url{https://pytorch.org/}
+	
+	\bibitem{vmconfig}
+	Virtual Machine pre-settings: \url{https://console.cloud.google.com/marketplace/details/click-to-deploy-images/deeplearning}
+	
+	\bibitem{gcloud}
+	Google Cloud Platform: \url{https://cloud.google.com/}
 	
 \end{thebibliography}
 
